--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ title: Home
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
   </head>
   <h2>✍️  Latest Post</h2>
   <body>
