--- a/posts.html
+++ b/posts.html
@@ -4,6 +4,7 @@ title: Posts
 ---
 <h1>Posts</h1>
 
+<h2>by Reverse Chronological Order</h2>
 <ul>
   {% for post in site.posts %}
     <li>
@@ -12,3 +13,14 @@ title: Posts
     </li>
   {% endfor %}
 </ul>
+
+<h2>by Tags</h2>
+{% assign sorted_tags = site.tags | sort %}
+{% for tag in sorted_tags %}
+  <ul>
+    <b>{{ tag[0] }}</b>
+        {% for post in tag[1] %}
+        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+  </ul>
+{% endfor %}
